# high-octane-rumble-simulation-engine

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
horse/: blen.py  compiler.py  tournament.py  types.py
tests/: test_blen.py  test_types.py
