[tool.poetry]
name = "high-octane-rumble-simulation-engine"
version = "0.1.0"
description = "It's a fight to the death!"
authors = ["Blaine Rogers <blaine.w.rogers@gmail.com>"]
readme = README.rst

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
restview = "^2.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
