[tool.poetry]
name = "high-octane-rumble-simulation-engine"
version = "0.1.0"
description = "It's a fight to the death!"
authors = ["Blaine Rogers <blaine.w.rogers@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
restview = "^3.0.1"
hypothesis = "^6.70.1"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

